--- a/src/main/webapp/WEB-INF/views/result.html
+++ b/src/main/webapp/WEB-INF/views/result.html
@@ -5,12 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>List</h1>
-<form action="/products/search" method="get">
-    <input type="text" name="name">
-    <button>Search</button>
-</form>
-<a href="/products/create">Add</a>
+<h1>Result</h1>
 <table border="1">
     <tr>
         <td>STT</td>
